src/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/java/jdk1.8.0_144/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/opt/bluej/lib/bluejcore.jar:/opt/bluej/lib/junit-4.11.jar:/opt/bluej/lib/hamcrest-core-1.3.jar:/opt/bluej/lib/lang-stride.jar:/opt/bluej/lib/userlib/pi4j-gpio-extension.jar:/opt/bluej/lib/userlib/pi4j-core.jar:/opt/bluej/lib/userlib/pi4j-device.jar:/opt/bluej/lib/userlib/pi4j-service.jar:/home/k1631585/Documents/github/lifeOfAComputerScientist/src
-d
/home/k1631585/Documents/github/lifeOfAComputerScientist/src/doc
-encoding
UTF-8
-charset
UTF-8
/home/k1631585/Documents/github/lifeOfAComputerScientist/src/Game.java
<---- end of javadoc command ---->
Loading source file /home/k1631585/Documents/github/lifeOfAComputerScientist/src/Game.java...
/home/k1631585/Documents/github/lifeOfAComputerScientist/src/Game.java:123: error: not a statement
    }ide-java
        ^
/home/k1631585/Documents/github/lifeOfAComputerScientist/src/Game.java:123: error: ';' expected
    }ide-java
             ^
/home/k1631585/Documents/github/lifeOfAComputerScientist/src/Game.java:155: error: not a statement
  private boolean checkCWDeadline() {ide-java
                                        ^
/home/k1631585/Documents/github/lifeOfAComputerScientist/src/Game.java:155: error: ';' expected
  private boolean checkCWDeadline() {ide-java
                                             ^
4 errors
